--- a/src/app/pages/overview/overview.component.html
+++ b/src/app/pages/overview/overview.component.html
@@ -1,1 +1,9 @@
-<p>overview works!</p>
+<mat-table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+  <ng-container [matColumnDef]="column.columnId" *ngFor="let column of columns">
+    <mat-header-cell mat-header-cell *matHeaderCellDef>{{ column.header }}</mat-header-cell>
+    <mat-cell mat-cell *matCellDef="let element">{{ column.cell(element) }}</mat-cell>
+  </ng-container>
+
+  <mat-header-row mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+</mat-table>
