--- a/src/app/pages/overview/overview.component.html
+++ b/src/app/pages/overview/overview.component.html
@@ -32,7 +32,7 @@
 
 
       <mat-header-row mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+      <mat-row mat-row *matRowDef="let row; columns: displayedColumns" [routerLink]="['/info/', row.id]"></mat-row>
     </mat-table>
 
     <mat-paginator [length]="dataSource.data.length" [pageSize]="10" aria-label="Select page"></mat-paginator>
